...
    case isEmpty
    case custom(_ message: String)
    
    var errorDescription: String? {
        switch self {
        case .isEmpty:
            return "Input should not be empty!"
            
        case .custom(let message):
            return "\(message)"
        }
        
    }
...
        if name.isEmpty { return ValidationError.isEmpty }
        return nil
    }
    
    private func validateAge(_ ageInt: Int?) -> LocalizedError? {
        guard let age = ageInt else { return ValidationError.isEmpty }
        if age <= 0 { return ValidationError.custom("Age should not be 0!")}
        return nil
    }
    
}

