...
                    } label: {
                        Text("Submit")
                            .frame(maxWidth: .infinity)
                            .padding(.vertical, 8.0)
                    }
                }
                .accessibilityIdentifier("register.button.submit")
                .disabled(!isFormValid)
                .buttonStyle(.automatic)
            }
        }
        .padding(.horizontal)
        .onReceive(registerVM.isSecondFormValid) { output in
...
