...
                    }
                    .frame(maxWidth: .infinity)
                    .padding(8.0)
                }
                .disabled(!isFormValid)
                .buttonStyle(.automatic)
                .accessibilityIdentifier("register.button.next")
            } // - Register Form
            Text("RegisterViewModel")
            Text("Name: \(viewModel.name ?? "nil")")
            Text("Age: \(viewModel.age == nil ? "nil" : String(viewModel.age!))")
        } // - Main Stack
        .padding(.horizontal, 16.0)
...
